--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo-rails": "^7.1.1",
     "@popperjs/core": "^2.11.2",
+    "@rails/activestorage": "^7.0.4",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
     "copyfiles": "^2.4.1",
