--- a/config/storage.yml
+++ b/config/storage.yml
@@ -15,11 +15,37 @@ local:
 #   bucket: your_own_bucket-<%= Rails.env %>
 
 # Remember not to checkin your GCS keyfile to a repository
-# google:
-#   service: GCS
-#   project: your_project
-#   credentials: <%= Rails.root.join("path/to/gcs.keyfile") %>
-#   bucket: your_own_bucket-<%= Rails.env %>
+google_dev:
+  service: GCS
+  project: <%= Rails.application.credentials.google_dev_storage[:project_id] %>
+  credentials: 
+    type: <%= Rails.application.credentials.google_dev_storage[:type] %>
+    project_id: <%= Rails.application.credentials.google_dev_storage[:project_id] %>
+    private_key_id: <%= Rails.application.credentials.google_dev_storage[:private_key_id] %>
+    private_key: <%= Rails.application.credentials.google_dev_storage[:private_key] %>
+    client_email: <%= Rails.application.credentials.google_dev_storage[:client_email] %>
+    client_id: <%= Rails.application.credentials.google_dev_storage[:client_id] %>
+    auth_uri: <%= Rails.application.credentials.google_dev_storage[:auth_uri] %>
+    token_uri: <%= Rails.application.credentials.google_dev_storage[:token_uri] %>
+    auth_provider_x509_cert_url: <%= Rails.application.credentials.google_dev_storage[:auth_provider_x509_cert_url] %>
+    client_x509_cert_url: <%= Rails.application.credentials.google_dev_storage[:client_x509_cert_url] %>
+  bucket: <%= Rails.application.credentials.google_dev_storage[:bucket] %>
+
+google_prod:
+  service: GCS
+  project: <%= Rails.application.credentials.google_dev_storage[:project_id] %>
+  credentials: 
+    type: <%= Rails.application.credentials.google_dev_storage[:type] %>
+    project_id: <%= Rails.application.credentials.google_dev_storage[:project_id] %>
+    private_key_id: <%= Rails.application.credentials.google_dev_storage[:private_key_id] %>
+    private_key: <%= Rails.application.credentials.google_dev_storage[:private_key] %>
+    client_email: <%= Rails.application.credentials.google_dev_storage[:client_email] %>
+    client_id: <%= Rails.application.credentials.google_dev_storage[:client_id] %>
+    auth_uri: <%= Rails.application.credentials.google_dev_storage[:auth_uri] %>
+    token_uri: <%= Rails.application.credentials.google_dev_storage[:token_uri] %>
+    auth_provider_x509_cert_url: <%= Rails.application.credentials.google_dev_storage[:auth_provider_x509_cert_url] %>
+    client_x509_cert_url: <%= Rails.application.credentials.google_dev_storage[:client_x509_cert_url] %>
+  bucket: <%= Rails.application.credentials.google_dev_storage[:bucket] %>
 
 # Use bin/rails credentials:edit to set the Azure Storage secret (as azure_storage:storage_access_key)
 # microsoft:
