--- a/config/storage.yml
+++ b/config/storage.yml
@@ -17,35 +17,35 @@ local:
 # Remember not to checkin your GCS keyfile to a repository
 google_dev:
   service: GCS
-  project: <%= Rails.application.credentials.google_dev_storage[:project_id] %>
+  project: <%= Rails.application.credentials.google_storage[:project_id] %>
   credentials: 
-    type: <%= Rails.application.credentials.google_dev_storage[:type] %>
-    project_id: <%= Rails.application.credentials.google_dev_storage[:project_id] %>
-    private_key_id: <%= Rails.application.credentials.google_dev_storage[:private_key_id] %>
-    private_key: <%= Rails.application.credentials.google_dev_storage[:private_key] %>
-    client_email: <%= Rails.application.credentials.google_dev_storage[:client_email] %>
-    client_id: <%= Rails.application.credentials.google_dev_storage[:client_id] %>
-    auth_uri: <%= Rails.application.credentials.google_dev_storage[:auth_uri] %>
-    token_uri: <%= Rails.application.credentials.google_dev_storage[:token_uri] %>
-    auth_provider_x509_cert_url: <%= Rails.application.credentials.google_dev_storage[:auth_provider_x509_cert_url] %>
-    client_x509_cert_url: <%= Rails.application.credentials.google_dev_storage[:client_x509_cert_url] %>
-  bucket: <%= Rails.application.credentials.google_dev_storage[:bucket] %>
+    type: <%= Rails.application.credentials.google_storage[:type] %>
+    project_id: <%= Rails.application.credentials.google_storage[:project_id] %>
+    private_key_id: <%= Rails.application.credentials.google_storage[:private_key_id] %>
+    private_key: <%= Rails.application.credentials.google_storage[:private_key] %>
+    client_email: <%= Rails.application.credentials.google_storage[:client_email] %>
+    client_id: <%= Rails.application.credentials.google_storage[:client_id] %>
+    auth_uri: <%= Rails.application.credentials.google_storage[:auth_uri] %>
+    token_uri: <%= Rails.application.credentials.google_storage[:token_uri] %>
+    auth_provider_x509_cert_url: <%= Rails.application.credentials.google_storage[:auth_provider_x509_cert_url] %>
+    client_x509_cert_url: <%= Rails.application.credentials.google_storage[:client_x509_cert_url] %>
+  bucket: <%= Rails.application.credentials.google_storage[:bucket] %>
 
 google_prod:
   service: GCS
-  project: <%= Rails.application.credentials.google_dev_storage[:project_id] %>
+  project: <%= Rails.application.credentials.google_storage[:project_id] %>
   credentials: 
-    type: <%= Rails.application.credentials.google_dev_storage[:type] %>
-    project_id: <%= Rails.application.credentials.google_dev_storage[:project_id] %>
-    private_key_id: <%= Rails.application.credentials.google_dev_storage[:private_key_id] %>
-    private_key: <%= Rails.application.credentials.google_dev_storage[:private_key] %>
-    client_email: <%= Rails.application.credentials.google_dev_storage[:client_email] %>
-    client_id: <%= Rails.application.credentials.google_dev_storage[:client_id] %>
-    auth_uri: <%= Rails.application.credentials.google_dev_storage[:auth_uri] %>
-    token_uri: <%= Rails.application.credentials.google_dev_storage[:token_uri] %>
-    auth_provider_x509_cert_url: <%= Rails.application.credentials.google_dev_storage[:auth_provider_x509_cert_url] %>
-    client_x509_cert_url: <%= Rails.application.credentials.google_dev_storage[:client_x509_cert_url] %>
-  bucket: <%= Rails.application.credentials.google_dev_storage[:bucket] %>
+    type: <%= Rails.application.credentials.google_storage[:type] %>
+    project_id: <%= Rails.application.credentials.google_storage[:project_id] %>
+    private_key_id: <%= Rails.application.credentials.google_storage[:private_key_id] %>
+    private_key: <%= Rails.application.credentials.google_storage[:private_key] %>
+    client_email: <%= Rails.application.credentials.google_storage[:client_email] %>
+    client_id: <%= Rails.application.credentials.google_storage[:client_id] %>
+    auth_uri: <%= Rails.application.credentials.google_storage[:auth_uri] %>
+    token_uri: <%= Rails.application.credentials.google_storage[:token_uri] %>
+    auth_provider_x509_cert_url: <%= Rails.application.credentials.google_storage[:auth_provider_x509_cert_url] %>
+    client_x509_cert_url: <%= Rails.application.credentials.google_storage[:client_x509_cert_url] %>
+  bucket: <%= Rails.application.credentials.google_storage[:bucket] %>
 
 # Use bin/rails credentials:edit to set the Azure Storage secret (as azure_storage:storage_access_key)
 # microsoft:
