--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "local-time": "^2.1.0",
     "quill": "^1.3.7",
     "sass": "^1.48.0",
+    "stimulus-chartjs": "^4.0.0",
     "stimulus-rails-nested-form": "^4.0.0",
     "stimulus-textarea-autogrow": "^4.0.0"
   },
