--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "copyfiles": "^2.4.1",
     "esbuild": "^0.14.11",
     "local-time": "^2.1.0",
+    "prismjs": "^1.29.0",
     "quill": "^1.3.7",
     "sass": "^1.48.0",
     "stimulus-chartjs": "^4.0.0",
@@ -20,5 +21,8 @@
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds",
     "build:css": "copyfiles -f node_modules/bootstrap-icons/font/fonts/* public/fonts && sass ./app/assets/stylesheets/application.bootstrap.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+  },
+  "devDependencies": {
+    "babel-plugin-prismjs": "^2.1.0"
   }
 }
