add voice table

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ synthesize-output-audio.mp3
 synthesize-output-audio-ruby.mp3
 synthesize-output-audio_female.mp3
 base64_commands.txt
+voicejs.haml
